--- a/index.html
+++ b/index.html
@@ -1,1 +1,18 @@
-Hello World!
+<head>
+  <meta charset="utf-8">
+  <title>Solon Labs</title
+  <style>
+    body {
+    font-family: Helvetica, Arial, sans-serif;
+    }
+  </style>
+</head>
+<body>
+  <h1>Solon Labs GmbH</h1>
+  <h3>Internet & Blockchain Technology</h3>
+  <h2>Contact Us: solonlabs@protonmail.com</h2>
+</body>
+
+
+
+
