--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <head>
   <meta charset="utf-8">
-  <title>Solon Labs</title
+  <title>Solon Labs</title>
   <style>
     body {
     font-family: Helvetica, Arial, sans-serif;
