--- a/index.html
+++ b/index.html
@@ -8,9 +8,10 @@
   </style>
 </head>
 <body>
+  <br>
   <h1>Solon Labs GmbH</h1>
   <h3>Internet & Blockchain Technology</h3>
-  <h2>Contact Us: solonlabs@protonmail.com</h2>
+  <a href="mailto:solonlabs@protonmail.com"><h4>Contact Us</h4></a>
 </body>
 
 
