--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
   <title>Solon Labs</title>
   <style>
     body {
+    margin-left: 10%;
+    margin-top: 10%;
     font-family: Helvetica, Arial, sans-serif;
     }
   </style>
